k/k3d-smiley-secrets/resource-pod-secrets.yaml
#ManagedBy: cue

metadata:
  name: secrets
spec:
  containers:
    - name: sleep
      image: ubuntu
      command:
        - bash
        - -c
      args:
        - sleep infinity
      volumeMounts: []
  volumes: []
kind: Pod
apiVersion: v1
