k/k3d-smiley-secrets/resource-kyverno-sync-secrets.yaml
#ManagedBy: cue

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: kyverno-sync-secrets
spec:
  rules: []
